# Olio-ohjelmointi_kevat2025

./: README.md
Nosto/: Nosto.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  muunosto.cpp  muunosto.h  muunosto.ui
Olio-Viikkotehtava7-2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Olio-viikkotehtava3/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Olio-viikkotehtava4/: asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp
Olio-viikkotehtava5/: main.cpp  notifikaattori.cpp  seuraaja.cpp
Olio-viikkotehtava6/: main.cpp
Olio-viikkotehtava8/: mainwindow.cpp  mainwindow.h  mainwindow.ui
OlioViikkotehtava1T1/: CMakeLists.txt  main.cpp
OlioViikkotehtava2/: game.cpp  game.h  main.cpp
